--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Discord</title>
 </head>
@@ -15,19 +18,23 @@
     <header>
         <section class="section1">
             <div class="row1 debug-row1">
-                <div class="logo1 debug-logo">Logo</div>
+                <div class="logo1 debug-logo"><img src="img/logo.svg" alt=""></div>
                 <ul class="ul debug-ul">
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
-                <div class="login debug-login">Login</div>
+                <div class="login debug-login">Accedi</div>
             </div>
         </section>
         <div class="header2">
-            <div id="box1"></div>
+            <div id="box1">
+                <section id="section-header">
+                    <h1>Il tuo posto per Parlare</h1>
+                </section>
+            </div>
         </div>
         <div class="div1"></div>
     </header>
