--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <div id="box1">
                 <section id="section-header">
                     <h1>Il tuo posto per Parlare</h1>
+                    <div>Che tu faccia parte di un club colastico, gruppo gamer, comunità artistica mondiale,<br> o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br> Discord rende più facile chicchierare ogni giorno e ritrovarsi più spesso.</div>
+                    <div>
+                        <span id="span1">🠗 Scarica per Mac</span>
+                        <span id="span2">Apri Discord nel tuo browser</span>
+                    </div>
                 </section>
             </div>
         </div>
