--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Discord</title>
 </head>
@@ -33,7 +33,9 @@
             <div id="box1">
                 <section id="section-header">
                     <h1>Il tuo posto per Parlare</h1>
-                    <div>Che tu faccia parte di un club colastico, gruppo gamer, comunità artistica mondiale,<br> o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br> Discord rende più facile chicchierare ogni giorno e ritrovarsi più spesso.</div>
+                    <div>Che tu faccia parte di un club colastico, gruppo gamer, comunità artistica mondiale,<br> o
+                        semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br> Discord
+                        rende più facile chicchierare ogni giorno e ritrovarsi più spesso.</div>
                     <div>
                         <span id="span1">🠗 Scarica per Mac</span>
                         <span id="span2">Apri Discord nel tuo browser</span>
@@ -51,25 +53,46 @@
     <main>
         <div class="container1">
             <div class="bigbox1">
-                <div class="boxblue"></div>
-                <div class="boxpurple"></div>
+                <div class="boxblue" id="study"></div>
+                <div class="boxpurple section">
+                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                        semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
         </div>
         <div class="container2">
             <div class="bigbox2">
-                <div class="boxblue"></div>
-                <div class="boxpurple"></div>
+                <div class="boxblue" id="just"></div>
+                <div class="boxpurple section">
+                    <h1>Dove trovarsi è facile</h1>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che
+                        sei lì e unirsi istantaneamente serza dover chimare.</p>
+                </div>
             </div>
         </div>
         <div class="container1">
             <div class="bigbox1">
-                <div class="boxblue"></div>
-                <div class="boxpurple"></div>
+                <div class="boxblue" id="coach"></div>
+                <div class="boxpurple section">
+                    <h1>Da pochi a un Fandom</h1>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
+                        membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                    </p>
+                </div>
             </div>
 
         </div>
         <div class="container3">
-            <div class="bigbox3"></div>
+            <div class="bigbox3 section">
+                <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+                    video, guarda<br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+                    condivisione schermo.
+                </p>
+                <h3>Pronto a iniziare la tua un'avventura?</h3>
+                <div>🠗 Scarica per Mac</div>
+            </div>
         </div>
 
     </main>
