--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Discord</title>
 </head>
@@ -106,18 +107,80 @@
     <footer>
         <div class="container4">
             <div class="bigbox4">
-                <div class="boxred"></div>
-                <div class="boxacqua"></div>
-                <div class="boxacqua"></div>
-                <div class="boxacqua"></div>
-                <div class="boxacqua"></div>
+                <div class="boxred">
+                    <h2>Il tuo posto per <br> 
+                        parlare</h2>
+                    <li><img src="img/ita.png" alt="bandiera"> Italiano ∨</li>
+                    <div>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+                <div class="bigboxacqua">
+                    <div class="boxacqua">
+                        <span>
+                            Prodotto
+                        </span>                           
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="boxacqua">
+                        <span>
+                            Compagnia
+                        </span>                       
+                        <ul>
+                            <li>Chi siamo</li>
+                            <li>Lavora con noi</li>
+                            <li>Marchio</li>
+                            <li>Redazione</li>
+                            <li>Negozio</li>
+                        </ul>
+                    </div>
+                    <div class="boxacqua">
+                        <span>
+                            Risorse
+                        </span>                        
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="boxacqua">
+                        <span>
+                            Norme
+                        </span>
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                </div>
+                
             </div>
         </div>
         <div class="div2"></div>
         <section class="section2">
             <div class="row2">
-                <div class="logo2">Logo</div>
-                <div class="logo2" id="bottone">Bottone</div>
+                <div class="logo2"><img src="img/logo.svg" alt=""></div>
+                <div class="logo2" id="bottone">Registrati</div>
             </div>
         </section>
         <div class="div2"></div>
