--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br> Discord
                         rende più facile chicchierare ogni giorno e ritrovarsi più spesso.</div>
                     <div>
-                        <span id="span1">🠗 Scarica per Mac</span>
+                        <span id="span1"><i class="fa-solid fa-circle-down"></i> Scarica per Mac</span>
                         <span id="span2">Apri Discord nel tuo browser</span>
                     </div>
                 </section>
@@ -92,7 +92,7 @@
                     condivisione schermo.
                 </p>
                 <h3>Pronto a iniziare la tua un'avventura?</h3>
-                <div>🠗 Scarica per Mac</div>
+                <div><i class="fa-solid fa-circle-down"></i> Scarica per Mac</div>
             </div>
         </div>
 
@@ -110,7 +110,7 @@
                 <div class="boxred">
                     <h2>Il tuo posto per <br> 
                         parlare</h2>
-                    <li><img src="img/ita.png" alt="bandiera"> Italiano ∨</li>
+                    <li><img src="img/ita.png" alt="bandiera"> Italiano <i class="fa-solid fa-angle-down"></i></li>
                     <div>
                         <i class="fa-brands fa-twitter"></i>
                         <i class="fa-brands fa-instagram"></i>
