aggiunta onde senza cambio colore

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 </div>
             </div>
         </div>
+        <div><img class="wave2" src="img/wave.svg" alt=""></div>
         <div class="container2">
             <div class="bigbox2">
                 <div class="boxblue" id="just"></div>
@@ -72,6 +73,7 @@
                 </div>
             </div>
         </div>
+        <div><img class="wave1" src="img/wave.svg" alt=""></div>
         <div class="container1">
             <div class="bigbox1">
                 <div class="boxblue" id="coach"></div>
@@ -84,6 +86,7 @@
             </div>
 
         </div>
+        <div><img class="wave2" src="img/wave.svg" alt=""></div>
         <div class="container3">
             <div class="bigbox3 section">
                 <h1>Tecnologia affidabile per tenersi in contatto</h1>
